--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
-  "name": "nodejs-typescript-typegraphql",
-  "version": "1.0.0",
-  "main": "index.js",
-  "repository": "https://github.com/kazuki0924/nodejs-typescript-typegraphql.git",
-  "author": "Kazuki Matsuzaki <kazuki0924@gmail.com>",
-  "license": "MIT",
-  "dependencies": {
-    "apollo-server-express": "^2.14.2",
-    "express": "^4.17.1",
-    "graphql": "^15.0.0",
-    "reflect-metadata": "^0.1.13",
-    "type-graphql": "^1.0.0-rc.2"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.6",
-    "@types/graphql": "^14.5.0",
-    "@types/node": "^14.0.11",
-    "nodemon": "^2.0.4",
-    "ts-node": "^8.10.2",
-    "typescript": "^3.9.5"
-  }
+	"name": "nodejs-typescript-typegraphql",
+	"version": "1.0.0",
+	"main": "index.js",
+	"repository": "https://github.com/kazuki0924/nodejs-typescript-typegraphql.git",
+	"author": "Kazuki Matsuzaki <kazuki0924@gmail.com>",
+	"license": "MIT",
+	"dependencies": {
+		"apollo-server-express": "^2.14.2",
+		"express": "^4.17.1",
+		"graphql": "^15.0.0",
+		"reflect-metadata": "^0.1.13",
+		"type-graphql": "^1.0.0-rc.2"
+	},
+	"devDependencies": {
+		"@types/bcryptjs": "^2.4.2",
+		"@types/express": "^4.17.6",
+		"@types/graphql": "^14.5.0",
+		"@types/node": "^14.0.11",
+		"nodemon": "^2.0.4",
+		"ts-node": "^8.10.2",
+		"typescript": "^3.9.5"
+	},
+	"scripts": {
+		"start": "nodemon --exec ts-node src/index.ts"
+	}
 }
