--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
 	"author": "Kazuki Matsuzaki <kazuki0924@gmail.com>",
 	"license": "MIT",
 	"dependencies": {
-		"@types/ioredis": "^4.16.4",
 		"apollo-server-express": "^2.14.2",
 		"bcryptjs": "^2.4.3",
 		"class-validator": "^0.12.2",
@@ -22,6 +21,9 @@
 		"@types/express": "^4.17.6",
 		"@types/graphql": "^14.5.0",
 		"@types/node": "^14.0.11",
+		"@types/connect-redis": "0.0.14",
+		"@types/express-session": "^1.17.0",
+		"@types/ioredis": "^4.16.4",
 		"connect-redis": "^4.0.4",
 		"cors": "^2.8.5",
 		"express-session": "^1.17.1",
