--- a/package.json
+++ b/package.json
@@ -11,28 +11,33 @@
 		"class-validator": "^0.12.2",
 		"express": "^4.17.1",
 		"graphql": "^15.0.0",
+		"nodemailer": "^6.4.8",
 		"pg": "^8.2.1",
 		"reflect-metadata": "^0.1.13",
 		"type-graphql": "^1.0.0-rc.2",
-		"typeorm": "^0.2.25"
+		"typeorm": "^0.2.25",
+		"uuid": "^8.1.0"
 	},
 	"devDependencies": {
 		"@types/bcryptjs": "^2.4.2",
-		"@types/express": "^4.17.6",
-		"@types/graphql": "^14.5.0",
-		"@types/node": "^14.0.11",
 		"@types/connect-redis": "0.0.14",
+		"@types/express": "^4.17.6",
 		"@types/express-session": "^1.17.0",
+		"@types/graphql": "^14.5.0",
 		"@types/ioredis": "^4.16.4",
+		"@types/node": "^14.0.11",
+		"@types/nodemailer": "^6.4.0",
+		"@types/uuid": "^8.0.0",
 		"connect-redis": "^4.0.4",
 		"cors": "^2.8.5",
 		"express-session": "^1.17.1",
 		"ioredis": "^4.17.3",
+		"nodemon": "^2.0.4",
 		"ts-node": "^8.10.2",
 		"ts-node-dev": "^1.0.0-pre.44",
 		"typescript": "^3.9.5"
 	},
 	"scripts": {
-		"start": "ts-node-dev --respawn src/index.ts"
+		"start": "nodemon --exec ts-node src/index.ts"
 	}
 }
