--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,6 +1,7 @@
 {
 	"name": "default",
 	"type": "postgres",
+  "host": "localhost",
 	"port": 5432,
 	"username": "postgres",
 	"password": "postgres",
