--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
 		"typescript": "^3.9.5"
 	},
 	"scripts": {
-		"start": "nodemon --exec ts-node src/index.ts",
-		"db:setup": "ts-node src/test-utils/setup.ts",
+    "db:setup": "ts-node ./src/test-utils/setup.ts",
 		"test": "npm run db:setup && jest"
 	}
 }
