--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@types/connect-redis": "0.0.14",
 		"@types/express": "^4.17.6",
 		"@types/express-session": "^1.17.0",
+		"@types/faker": "^4.1.12",
 		"@types/graphql": "^14.5.0",
 		"@types/ioredis": "^4.16.4",
 		"@types/jest": "^26.0.0",
@@ -32,6 +33,7 @@
 		"connect-redis": "^4.0.4",
 		"cors": "^2.8.5",
 		"express-session": "^1.17.1",
+		"faker": "^4.1.0",
 		"ioredis": "^4.17.3",
 		"jest": "^26.0.1",
 		"nodemon": "^2.0.4",
@@ -41,7 +43,7 @@
 		"typescript": "^3.9.5"
 	},
 	"scripts": {
-    "db:setup": "ts-node ./src/test-utils/setup.ts",
+		"db:setup": "ts-node ./src/test-utils/setup.ts",
 		"test": "npm run db:setup && jest"
 	}
 }
