--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,11 +1,11 @@
 {
 	"name": "default",
 	"type": "postgres",
-  "host": "localhost",
+	"host": "localhost",
 	"port": 5432,
 	"username": "postgres",
 	"password": "postgres",
-	"database": "nodejs-typescript-typegraphql",
+	"database": "ts-ql",
 	"synchronize": true,
 	"logging": true,
 	"entities": ["src/entity/*.*"]
