--- a/package.json
+++ b/package.json
@@ -6,45 +6,45 @@
 	"author": "Kazuki Matsuzaki <kazuki0924@gmail.com>",
 	"license": "UNLICENSED",
 	"dependencies": {
-    "apollo-server-express": "^2.3.1",
+		"apollo-server-express": "^2.3.1",
 		"bcryptjs": "^2.4.3",
-    "class-validator": "^0.9.1",
-    "connect-redis": "^3.4.0",
-    "cors": "^2.8.5",
-    "express": "^4.16.4",
-    "express-session": "^1.15.6",
-    "graphql": "^14.0.2",
-    "ioredis": "^4.3.0",
-    "nodemailer": "^5.1.1",
-    "pg": "^7.7.1",
-    "reflect-metadata": "^0.1.12",
-    "type-graphql": "^0.16.0",
-    "typeorm": "^0.2.11",
-    "uuid": "^3.3.2"
+		"class-validator": "^0.12.2",
+		"connect-redis": "^4.0.4",
+		"cors": "^2.8.5",
+		"express": "^4.16.4",
+		"express-session": "^1.15.6",
+		"graphql": "^15.1.0",
+		"ioredis": "^4.3.0",
+		"nodemailer": "^6.4.10",
+		"pg": "^8.2.1",
+		"reflect-metadata": "^0.1.12",
+		"type-graphql": "^1.0.0-rc.2",
+		"typeorm": "^0.2.11",
+		"uuid": "^8.1.0"
 	},
 	"devDependencies": {
 		"@types/bcryptjs": "^2.4.2",
-    "@types/connect-redis": "^0.0.8",
-    "@types/cors": "^2.8.4",
-    "@types/express": "^4.16.0",
-    "@types/express-session": "^1.15.11",
-    "@types/faker": "^4.1.4",
-    "@types/graphql": "^14.0.4",
-    "@types/ioredis": "^4.0.4",
-    "@types/jest": "^23.3.12",
-    "@types/node": "^10.12.18",
-    "@types/nodemailer": "^4.6.5",
-    "@types/uuid": "^3.4.4",
+		"@types/connect-redis": "^0.0.14",
+		"@types/cors": "^2.8.4",
+		"@types/express": "^4.16.0",
+		"@types/express-session": "^1.15.11",
+		"@types/faker": "^4.1.4",
+		"@types/graphql": "^14.5.0",
+		"@types/ioredis": "^4.0.4",
+		"@types/jest": "^26.0.0",
+		"@types/node": "^14.0.13",
+		"@types/nodemailer": "^6.4.0",
+		"@types/uuid": "^8.0.0",
 		"faker": "^4.1.0",
-    "jest": "^23.6.0",
-    "nodemon": "^1.18.9",
-    "ts-jest": "^23.10.5",
-    "ts-node": "^7.0.1",
-    "ts-node-dev": "^1.0.0-pre.32",
-    "typescript": "^3.2.2"
+		"jest": "^26.0.1",
+		"nodemon": "^2.0.4",
+		"ts-jest": "^26.1.0",
+		"ts-node": "^8.10.2",
+		"ts-node-dev": "^1.0.0-pre.32",
+		"typescript": "^3.2.2"
 	},
 	"scripts": {
-    "start": "ts-node-dev --respawn src/index.ts",
+		"start": "nodemon --exec ts-node src/index.ts",
 		"db:setup": "ts-node ./src/test-utils/setup.ts",
 		"test": "npm run db:setup && jest"
 	}
