--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"express": "^4.16.4",
 		"express-session": "^1.15.6",
 		"graphql": "^15.1.0",
+		"graphql-query-complexity": "^0.6.0",
 		"ioredis": "^4.3.0",
 		"nodemailer": "^6.4.10",
 		"pg": "^8.2.1",
